finished readme and committed the unfinished borrowed books stuff
