# lib/dao.js
@@ -3,6 +3,7 @@ var dao = {};
 var data = require('../data/seed');
 
 var books = data.books;
+var borrowedBooks = data.borrowedBooks;
 var statusTypes = data.statusTypes;
 var genreTypes = data.genreTypes;
 
@@ -13,6 +14,18 @@ dao.loadBooks = function() {
         console.log(`failed to Load Book Data: ${err}`);
       } else {
         console.info(`${books.length} books were successfully stored.`);
+      }
+    });
+  });
+};
+
+dao.loadBorrowedBooks = function() {
+  Schemas.borrowedBookModel.find({}).remove(() => {
+    Schemas.borrowedBookModel.collection.insert(borrowedBooks, (err, docs)=>{
+      if (err) {
+        console.log(`failed to Load borrowed Book Data: ${err}`);
+      } else {
+        console.info(`${borrowedBooks.length} borrowed Book levels were successfully stored.`);
       }
     });
   });
@@ -49,6 +62,15 @@ dao.loadGenreTypes = function() {
  **/
 dao.getAllBooks = function() {
   return Schemas.bookModel.find({}).lean();
+}
+
+/**
+ * Get a list of the library book titles
+ *
+ * returns Book title
+ **/
+dao.getAllBookTitles = function() {
+  return Schemas.bookModel.find({},{ "title": 1,"_id": 0 });
 }
 
 /**
